<resources>
    <string name="app_name">HomeworkTwenty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="add_user">Add user</string>
    <string name="remove_user">Remove user</string>
    <string name="loading">Loading</string>
    <string name="success">Success!</string>
    <string name="failed">failed</string>
    <string name="user_added_successfuly">User added successfully</string>
    <string name="user_deleted_successfuly">User deleted Successfully</string>
    <string name="user_updates_successfuly">User updated successfully</string>
</resources>